--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -1,7 +1,7 @@
 [core]
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository. This path must be absolute.
-dags_folder = /home/rayzek/Documentos/CONSULTORA/Cripto_Real_Time/dags
+dags_folder = {{AIRFLOW_HOME}}/dags
 
 # Hostname by providing a path to a callable, which will resolve the hostname.
 # The format is "package.function".
@@ -66,8 +66,7 @@ max_active_runs_per_dag = 16
 load_examples = True
 
 # Path to the folder containing Airflow plugins
-plugins_folder = /home/rayzek/Documentos/CONSULTORA/Cripto_Real_Time/plugins
-
+plugins_folder = {{AIRFLOW_HOME}}/plugins
 # Should tasks be executed via forking of the parent process ("False",
 # the speedier option) or by spawning a new python process ("True" slow,
 # but means plugin changes picked up by tasks straight away)
@@ -305,7 +304,7 @@ check_migrations = True
 # There are a few existing configurations that assume this is set to the default.
 # If you choose to override this you may need to update the dag_processor_manager_log_location and
 # dag_processor_manager_log_location settings as well.
-base_log_folder = /home/rayzek/Documentos/CONSULTORA/Cripto_Real_Time/logs
+base_log_folder = {{AIRFLOW_HOME}}/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to True if you want to enable remote logging.
@@ -403,7 +402,7 @@ log_filename_template = dag_id={{ ti.dag_id }}/run_id={{ ti.run_id }}/task_id={{
 log_processor_filename_template = {{ filename }}.log
 
 # Full path of dag_processor_manager logfile.
-dag_processor_manager_log_location = /home/rayzek/Documentos/CONSULTORA/Cripto_Real_Time/logs/dag_processor_manager/dag_processor_manager.log
+dag_processor_manager_log_location = {{AIRFLOW_HOME}}/logs/dag_processor_manager/dag_processor_manager.log
 
 # Name of handler to read task instance logs.
 # Defaults to use ``task`` handler.
@@ -1116,7 +1115,7 @@ scheduler_health_check_server_port = 8974
 
 # How often (in seconds) should the scheduler check for orphaned tasks and SchedulerJobs
 orphaned_tasks_check_interval = 300.0
-child_process_log_directory = /home/rayzek/Documentos/CONSULTORA/Cripto_Real_Time/logs/scheduler
+child_process_log_directory = {{AIRFLOW_HOME}}/logs/scheduler
 
 # Local task jobs periodically heartbeat to the DB. If the job has
 # not heartbeat in this many seconds, the scheduler will mark the
