--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - 8080:8080
     depends_on:
       - db
+      - kafka
     environment:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@db/airflow
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
@@ -32,6 +33,7 @@ services:
       - ./dags:/usr/local/airflow/dags
     depends_on:
       - db
+      - kafka
     environment:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@db/airflow
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
@@ -45,3 +47,24 @@ services:
       - POSTGRES_DB=airflow
     environment:
       - TZ=America/Lima
+
+  zookeeper:
+    image: zookeeper:3.8.1
+    restart: always
+    environment:
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
+
+  kafka:
+    image: bitnami/kafka:3.3.2-debian-11-r58
+    restart: always
+    depends_on:
+      - zookeeper
+    ports:
+      - 9092:9092
+    environment:
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
+      - KAFKA_CREATE_TOPICS=topic1:1:1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_AUTO_CREATE_TOPICS_ENABLE=false
