Compose Semi Final

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,12 @@ services:
   webserver:
     build: .
     restart: always
-    command: >
-      bash -c "airflow db reset -y &&
-      airflow db init &&
-      airflow users create \
-        --username airflow \
-        --firstname Airflow \
-        --lastname User \
-        --role Admin \
-        --email airflow@example.com \
-        --password airflow &&
+    command: > 
+      bash -c "airflow db reset -y && 
+      airflow db init && 
+      airflow users create --username airflow --firstname Airflow --lastname User --role Admin --email airflow@example.com --password airflow && 
       airflow webserver"
+
     volumes:
       - ./dags:/usr/local/airflow/dags
     ports:
@@ -45,7 +40,6 @@ services:
       - POSTGRES_USER=airflow
       - POSTGRES_PASSWORD=airflow
       - POSTGRES_DB=airflow
-    environment:
       - TZ=America/Lima
 
   zookeeper:
@@ -68,3 +62,4 @@ services:
       - KAFKA_CREATE_TOPICS=topic1:1:1
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_AUTO_CREATE_TOPICS_ENABLE=false
+      - ALLOW_PLAINTEXT_LISTENER=yes
