--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   scheduler:
     build: .
     restart: always
-    command: airflow scheduler
+    command: bash -c "sleep 180 && airflow scheduler"
     volumes:
       - ./dags:/usr/local/airflow/dags
     depends_on:
